--- a/squirrel.custom.yaml
+++ b/squirrel.custom.yaml
@@ -6,7 +6,7 @@ patch:
       name: "简洁 / Pithy"
       author: "@hotoo"
 
-      horizontal: false                                 # 水平排列
+      horizontal: true                                  # 水平排列
       inline_preedit: false                             # true: 单行显示，false: 双行显示
       candidate_format: "\u2005%c\u2005%@\u2005"        # 用 1/6 em 空格 U+2005 来控制编号 %c 和候选词 %@ 前后的空间。
 
