--- a/default.custom.yaml
+++ b/default.custom.yaml
@@ -45,3 +45,11 @@ patch:
     - "✘"
     - "✖"
     - "✕"
+  "punctuator/full_shape":
+    '\' : '、'
+    '/' : '/'
+    # "`": {commit: "·"}
+  punctuator/half_shape:
+    '\' : '、'
+    '/' : '/'
+    # "`": {commit: "·"}
